add git simple config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=config-server
-spring.profiles.active=native
-spring.cloud.config.server.native.searchLocations=classpath:/config
+spring.profiles.active=git
+spring.cloud.config.server.git.default-label=master
+spring.cloud.config.server.git.uri=git@github.com:artemrogov/configs.git
+spring.cloud.config.server.git.searchPaths=microservice01
 server.port=8071
